# tg-dog

./: .gitignore  README.md  config.yaml.example  main.py  pyproject.toml
core/: __init__.py  action_payloads.py  action_types.py  actions.py  cli_runtime.py  client_manager.py  config.py  daemon_runtime.py  executor.py  ipc.py  plugins.py  scheduler.py
plugins/: README.md
plugins/business_template/: plugin.py
plugins/echo/: plugin.py
plugins/random_daily_sender/: README.md  plugin.py
plugins/vmomo_music/: README.md  plugin.py
plugins/webhook_listener/: README.md  plugin.py
scripts/: show_vmomo_history.py
systemd/: tg-dog.service
tests/: test_plugin_arg_defaults.py  test_plugin_help.py  test_safety_and_config.py  test_vmomo_music_safety.py
